# tinyfilemanager

./: README.md  pyproject.toml  requirements-dev.txt
tests/: test_tinyfilemanager.py
tinyfilemanager/: __init__.py  constants.py  error.py  tinyfilemanager.py
