[tool.poetry]
name = "tinyfilemanager"
version = "0.1.0"
description = ""
authors = ["hexatester <revolusi147id@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
pylint = "^2.7.2"
mypy = "^0.812"
black = "^20.8b1"
pytest-cov = "^2.11.1"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
